# querido

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DIFFERENTIATION.md  IDEAS.md  PLAN-performance.md  PLAN.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  RELEASE_READINESS_REVIEW.md  RELEASING.md  REVIEW_FINDINGS.md  plan.md  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: _config.yml  cli-reference.md  index.md  qdo-cheatsheet.html
docs/_layouts/: default.html
docs/archive/: IDEAS-2026-07-13.md  PLAN-2026-07-13.md  README.md
docs/archive/reviews/: 2026-04-25-release-readiness.md  2026-06-10-review-findings.md
docs/examples/: README.md
docs/examples/config/: connections.toml
docs/examples/metadata/test/: orders.yaml
docs/examples/reports/: orders-report.html
docs/research/: extensibility-mechanism.md  lat-md-comparison.md  mcp-wrapper-design.md  sodacl-data-contracts.md
docs/reviews/: RELEASE_READINESS_REVIEW.md
integrations/: agent-workflow-example.md
integrations/continue/: qdo.md
integrations/skills/: SKILL.md  WORKFLOW_AUTHORING.md  WORKFLOW_EXAMPLES.md
scripts/: benchmark.py  benchmark_agent_format.py  check_deps.py  demo.py  eval_skill_files.py  eval_skill_files_claude.py  eval_skill_files_codex.py  eval_workflow_authoring.py  generate_tui_screenshots.py  init-test-data.ps1  init-test-data.sh  init_test_data.py  init_tutorial_data.py  retag.sh  tutorial.py
skills/querido/: SKILL.md
src/querido/: __main__.py  _argv.py  _click.py  _json.py  _runtime.py  _shell.py  cache.py  config.py
src/querido/agent_docs/: __init__.py
src/querido/cli/: _context.py  _errors.py  _options.py  _pipeline.py  _progress.py  _session_runtime.py  _util.py  _validation.py  agent.py  argv_hoist.py  assert_cmd.py  bundle.py  cache.py  catalog.py  completion.py  config.py  context.py  diff.py  dist.py  explain.py  explore.py  export.py  freshness.py  inspect.py  joins.py  lineage.py  main.py  metadata.py  overview.py  pivot.py  preview.py  profile.py  quality.py  query.py  report.py  search.py  serve.py  session.py  snowflake.py  sql.py  (+5 more)
src/querido/connectors/: __init__.py  arrow_util.py  base.py  duckdb.py  factory.py  snowflake.py  sqlite.py
src/querido/core/: _concurrent.py  _utils.py  assert_check.py  bundle.py  catalog.py  context.py  diff.py  dist.py  estimate.py  explain.py  export.py  freshness.py  inspect.py  joins.py  lineage.py  metadata.py  metadata_field.py  metadata_score.py  metadata_write.py  next_steps.py  pivot.py  plan.py  preview.py  profile.py  quality.py  query.py  report.py  runner.py  search.py  semantic.py  session.py  sql_safety.py  template.py  values.py
src/querido/core/next_steps/: __init__.py  _helpers.py  catalog.py  errors.py  metadata.py  query.py  scan.py
src/querido/core/workflow/: __init__.py  expr.py  from_session.py  lint.py  loader.py  runner.py  spec.py
src/querido/core/workflow/examples/: column-deep-dive.yaml  feature-target-exploration.yaml  migration-safety.yaml  schema-compare.yaml  table-handoff.yaml  table-investigate.yaml  table-summary.yaml  wide-table-triage.yaml
src/querido/output/: __init__.py  console.py  envelope.py  formats.py  html.py  report_html.py  toon.py
src/querido/sql/: renderer.py
src/querido/sql/templates/catalog_functions/: duckdb.sql  snowflake.sql
src/querido/sql/templates/context/: duckdb.sql  snowflake.sql
src/querido/sql/templates/count/: common.sql
src/querido/sql/templates/frequency/: common.sql  snowflake.sql
src/querido/sql/templates/freshness/: common.sql
src/querido/sql/templates/generate/ddl/: common.sql
src/querido/sql/templates/generate/insert/: common.sql
src/querido/sql/templates/generate/procedure/: snowflake.sql
src/querido/sql/templates/generate/scratch/: common.sql  snowflake.sql
src/querido/sql/templates/generate/select/: common.sql
src/querido/sql/templates/generate/task/: snowflake.sql
src/querido/sql/templates/null_count/: common.sql  duckdb.sql  snowflake.sql
src/querido/sql/templates/preview/: common.sql
src/querido/sql/templates/profile/: duckdb.sql  snowflake.sql  sqlite.sql
src/querido/sql/templates/sample/: common.sql  duckdb.sql  snowflake.sql
src/querido/sql/templates/test/: common.sql
src/querido/tui/: app.py
src/querido/tui/screens/: column_picker.py  column_selector.py  dist.py  help.py  inspect.py  profile.py
src/querido/tui/widgets/: filter_bar.py  sidebar.py  status_bar.py
src/querido/tutorial/: __init__.py  _helpers.py  data.py  metadata_fixtures.py  runner.py  runner_agent.py
src/querido/web/: __init__.py
src/querido/web/routes/: fragments.py  pages.py  pivot.py
src/querido/web/static/: app.js  style.css
src/querido/web/templates/: base.html  landing.html  pivot.html  table.html
src/querido/web/templates/partials/: dist.html  inspect.html  lineage.html  pivot_result.html  preview.html  profile.html  table_list.html  template.html
tests/: conftest.py  test_agent_cmd.py  test_agent_format.py  test_agent_mode.py  test_argv_hoist.py  test_assert.py  test_bundle.py  test_cache.py  test_cancellation.py  test_catalog.py  test_cli.py  test_completion.py  test_config.py  test_config_cmd.py  test_connectors.py  test_context.py  test_core.py  test_diff.py  test_dist.py  test_empty_table.py  test_errors.py  test_eval_skill_files.py  test_eval_skill_files_claude.py  test_eval_skill_files_codex.py  test_explain.py  test_explore.py  test_export.py  test_format.py  test_freshness.py  test_fuzzy.py  test_html_format.py  test_inspect.py  test_joins.py  test_json.py  test_lineage.py  test_metadata.py  test_metadata_score.py  test_metadata_write.py  test_next_steps.py  test_overview.py  (+25 more)
tests/fixtures/toon/: NOTICE.md
tests/integration/: conftest.py  test_connectors.py  test_inspect.py  test_preview.py  test_profile.py
(+3 files in other folders)
