[project]
name = "querido"
version = "0.1.0"
description = "CLI data analysis toolkit for SQLite, DuckDB, and Snowflake"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "rich>=13",
    "platformdirs>=4",
    "jinja2>=3",
    "tomli-w>=1.2",
]

[project.optional-dependencies]
duckdb = [
    "duckdb>=1",
]
snowflake = [
    "snowflake-connector-python>=3.6",
    "pyarrow>=14",
]
tui = [
    "textual>=0.50",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
]

[project.scripts]
qdo = "querido.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/querido"]

[tool.ruff]
src = ["src", "tests"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ty.environment]
root = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "duckdb>=1",
    "pyarrow>=14",
    "ruff>=0.9",
    "ty>=0.0.1a7",
    "textual>=0.50",
    "textual-dev>=1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.27",
]
