[project]
name = "querido"
version = "0.1.0"
description = "Agent-first data exploration CLI for SQLite, DuckDB, Snowflake, and Parquet"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Curtis Alexander" },
]
keywords = [
    "cli",
    "data",
    "exploration",
    "profiling",
    "metadata",
    "sqlite",
    "duckdb",
    "snowflake",
    "parquet",
    "agent",
    "llm",
    "sql",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.15",
    "rich>=13.7",
    "platformdirs>=4.2",
    "jinja2>=3.1",
    "tomli-w>=1.2",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/curtisalexander/querido"
Repository = "https://github.com/curtisalexander/querido"
Issues = "https://github.com/curtisalexander/querido/issues"
Changelog = "https://github.com/curtisalexander/querido/blob/main/CHANGELOG.md"
Documentation = "https://curtisalexander.github.io/querido/"

[project.optional-dependencies]
duckdb = [
    "duckdb>=1.0",
]
snowflake = [
    "snowflake-connector-python>=3.6",
    "pyarrow>=14",
]
tui = [
    "textual>=0.50",
]
all = [
    "duckdb>=1.0",
    "snowflake-connector-python>=3.6",
    "pyarrow>=14",
    "textual>=0.50",
]

[project.scripts]
qdo = "querido.cli.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/querido"]

[tool.hatch.build.targets.wheel.force-include]
"integrations/skills/SKILL.md" = "querido/agent_docs/skills/SKILL.md"
"integrations/skills/WORKFLOW_AUTHORING.md" = "querido/agent_docs/skills/WORKFLOW_AUTHORING.md"
"integrations/skills/WORKFLOW_EXAMPLES.md" = "querido/agent_docs/skills/WORKFLOW_EXAMPLES.md"
"integrations/continue/qdo.md" = "querido/agent_docs/continue/qdo.md"

[tool.ruff]
src = ["src", "tests"]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "W", "C4", "PERF"]

[tool.ruff.lint.per-file-ignores]
"src/querido/tutorial/data.py" = ["E501"]  # Data file with long curated park tuples

[tool.ty.environment]
root = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "duckdb>=1.0",
    "pyarrow>=14",
    "ruff>=0.9",
    "ty>=0.0.1a7",
    "textual>=0.50",
    "textual-dev>=1",
    "cryptography>=43",
    "jsonschema>=4.21",
]
